# RtmpCamera

./: .gitignore  build.gradle  settings.gradle
RtmpCamera/: build.gradle
RtmpCamera/src/androidTest/java/com/flyzebra/rtmpcamera/: ExampleInstrumentedTest.java
RtmpCamera/src/androidTest/java/com/flyzebra/webcamera/: ExampleInstrumentedTest.java
RtmpCamera/src/main/: AndroidManifest.xml
RtmpCamera/src/main/java/com/flyzebra/camera/: CameraActivity.java  Config.java  MainActivity.java  MyApp.java  PermisionActivity.java
RtmpCamera/src/main/java/com/flyzebra/camera/audio/: AudioRocoder.java  IAudioListener.java
RtmpCamera/src/main/java/com/flyzebra/camera/camera/: EglCamera.java  EglFilter.java  EglGLSurface.java  EglHelper.java  IVideoListener.java  SimpleCamera.java
RtmpCamera/src/main/java/com/flyzebra/camera/media/: AudioEncoder.java  AudioEncoderCB.java  AudioStream.java  VideoEncoder.java  VideoEncoderCB.java
RtmpCamera/src/main/java/com/flyzebra/camera/service/: RtmpusherService.java
RtmpCamera/src/main/java/com/flyzebra/camera/ui/: CameraActivity.java
RtmpCamera/src/main/java/com/flyzebra/camera/view/: AutoSurfaceView.java  AutoTextureView.java
RtmpCamera/src/main/java/com/flyzebra/eglcamera/: EglCamera.java  EglFilter.java  EglGLSurface.java  EglHelper.java  EglRender.java  EglSurfaceView.java  IFrameListener.java
RtmpCamera/src/main/java/com/flyzebra/media/: AudioStream.java  VideoStream.java
RtmpCamera/src/main/java/com/flyzebra/notify/: INotify.java  Notify.java  NotifyType.java  Protocol.java
RtmpCamera/src/main/java/com/flyzebra/opengl/: GlRender.java  GlVideoView.java
RtmpCamera/src/main/java/com/flyzebra/rtmp/: FlvRtmpClient.java
RtmpCamera/src/main/java/com/flyzebra/rtmpcamera/: MainActivity.java
RtmpCamera/src/main/java/com/flyzebra/utils/: CameraUtils.java
RtmpCamera/src/main/java/com/flyzebra/webcamera/: MainActivity.java
RtmpCamera/src/main/res/layout/: activity_main.xml
RtmpCamera/src/main/res/raw/: glsl_oes_fagment.glsl  glsl_oes_vertex.glsl  glsl_yuv_fragment.glsl  glsl_yuv_vertex.glsl
RtmpCamera/src/main/res/values/: strings.xml  themes.xml
RtmpCamera/src/test/java/com/flyzebra/rtmpcamera/: ExampleUnitTest.java
RtmpCamera/src/test/java/com/flyzebra/webcamera/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
keystore/: platform.keystore  vlte.keystore
librtmp/: build.gradle
librtmp/src/main/cpp/: CMakeLists.txt  CallBack.cpp  CallBack.h  RtmpDump.cpp  RtmpDump.h  RtmpDump_jni.cpp
librtmp/src/main/cpp/buffer/: BufferManager.cpp  BufferManager.h  LoopBuf.cpp  LoopBuf.h
librtmp/src/main/cpp/include/openssl/: opensslconf.h
librtmp/src/main/cpp/librtmp/: handshake.h  hashswf.c
librtmp/src/main/cpp/utils/: FlyLog.h
librtmp/src/main/java/com/flyzebra/rtmp/: FlvRtmpClient.java  RtmpDump.java
libutils/src/main/java/com/flyzebra/utils/: ByteUtil.java  FlyLog.java  GLShaderUtils.java
libyuv/: build.gradle
libyuv/src/main/cpp/: CMakeLists.txt  FlyYuv.cpp  FlyYuv.h  FlyYuv_jni.cpp
libyuv/src/main/cpp/include/libyuv/: compare.h  planar_functions.h  row.h  scale.h
libyuv/src/main/java/com/flyzebra/libyuv/: FlyYuv.java
rtmplib/: CMakeLists.txt  build.gradle
rtmplib/src/main/: AndroidManifest.xml
rtmplib/src/main/cpp/: CMakeLists.txt  ffmpeg_jni.cpp  rtmpdump.c  rtmpdump.h  rtmpdump_jni.cpp
rtmplib/src/main/cpp/ffmpeg/: FFRtmp.cpp  FFRtmp.h
rtmplib/src/main/cpp/include/libavutil/: ffversion.h
rtmplib/src/main/cpp/include/openssl/: evp.h  rsa.h  x509_vfy.h
rtmplib/src/main/cpp/librtmp/: Makefile  dh.h  rtmp.c
rtmplib/src/main/cpp/openssl/: opensslconf.h
rtmplib/src/main/cpp/restreaming/: restreaming.c
rtmplib/src/main/cpp/rtmp/: libresrtmp.c  libresrtmp.h  log.h
rtmplib/src/main/cpp/rtmp/librtmp/: hashswf.c  log.c  parseurl.c
rtmplib/src/main/cpp/utils/: FlyLog.h
rtmplib/src/main/java/com/flyzebra/rtmp/: ColorHelper.java  FlvRtmpClient.java  RtmpClient.java  RtmpDump.java  RtmpFfmpeg.java
rtmplib/src/main/res/values/: strings.xml
utils/: build.gradle
utils/src/androidTest/java/com/flyzebra/utils/: ExampleInstrumentedTest.java
utils/src/main/java/com/flyzebra/utils/: MatrixUtils.java  SPUtil.java
utils/src/test/java/com/flyzebra/utils/: ExampleUnitTest.java
webcamera/: build.gradle  proguard-rules.pro
webcamera/src/androidTest/java/com/flyzebra/webcamera/: ExampleInstrumentedTest.java
webcamera/src/main/: AndroidManifest.xml
webcamera/src/main/java/com/flyzebra/media/: AudioStream.java  MediaEncoder.java  VideoEncode.java  VideoStream.java
webcamera/src/main/java/com/flyzebra/opengl/: GlRender.java  GlShaderUtils.java  GlVideoView.java
webcamera/src/main/java/com/flyzebra/rtmp/: FLvMetaData.java  FlvRtmpClient.java
webcamera/src/main/java/com/flyzebra/utils/: ByteUtil.java  CameraUtils.java  FlyLog.java
webcamera/src/main/java/com/flyzebra/webcamera/: MainActivity.java
webcamera/src/main/res/layout/: activity_main.xml
webcamera/src/main/res/values/: strings.xml
webcamera/src/main/res/values-night/: themes.xml
webcamera/src/test/java/com/flyzebra/webcamera/: ExampleUnitTest.java
yuvlib/: CMakeLists.txt  build.gradle
yuvlib/src/main/: AndroidManifest.xml
yuvlib/src/main/cpp/: FlyLibYUV.cpp  FlyLog.h  flylibyuv.cpp
yuvlib/src/main/java/com/flyzebra/libyuv/: LibYUVHelper.java  LibYuvTools.java
